# basic_web_blog_svelte

./: Cargo.toml  README.md
frontend/: package-lock.json  package.json  rollup.config.js
frontend/public/: global.css  index.html
frontend/src/: App.svelte  DarkModeToggle.svelte  Index.svelte  NewPost.svelte  login.svelte  routes.js  signUp.svelte
src/: main.rs
src/db/: blog.db  blog.db-shm  blog.db-wal  mod.rs  posts.rs  users.rs
src/jwt/: mod.rs
