[package]
name = "basic_web_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.37", features = ["serde"] }
env_logger = "0.11.3"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version= "0.7.4", features = [ "sqlite", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.37.0", features = [ "full" ] }

